--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8888
 
 mybatis.config: classpath:mybatis-config.xml
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useSSL=false
+    #url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
